# my-counter-rs

./: .gitignore  Cargo.toml  README.md  compose.yaml  package-lock.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cargo-ci.yml  node-ci.yml
docker/: Dockerfile
server/: Cargo.toml  Dockerfile
server/src/: counter.rs  main.rs
web/: astro.config.mjs  package.json  tailwind.config.mjs
web/src/components/: counter.tsx
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/services/: counter.ts
