[package]

name = "server"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]

axum = { version = "0.8" }
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
